tests/reference/asr-func_arg_array-609769c.stderr
semantic error: Incompatible rank `2` array passed in function which expects rank `3`.
 --> tests/errors/func_arg_array.f90:5:24
  |
5 |     i=print_flat_array(matrix)
  |                        ^^^^^^ 
